# lettermint-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-to-discord.yml  release.yml
src/: client.rs  email.rs  endpoints.rs  error.rs  lib.rs  types.rs  webhook.rs
tests/: sdk_surface.rs  webhook.rs
